spec/tests/error/error-1.3.tcl
# Test: error with code
error "permission denied" "" {POSIX EACCES}
